# boilerplate

./: .cursorignore  .dockerignore  .eslintrc.json  .gitignore  .prettierrc.json  AGENTS.md  Makefile  README.md  WARP.md  docker-compose.prod.yml  docker-compose.yml  env.example  fix_linting.sh  package-lock.json  package.json  run-dev.sh  run-prod.sh  tatus --porcelain  trunk.yaml  trunk.yaml.backup
.cursor/: settings.json
.cursor/rules/: 00-rule-classification.mdc  01-backend-general.mdc  02-frontend-react.mdc  03-documentation-quality.mdc  04-trunk-usage.mdc  05-operational-directives.mdc  06-security-best-practices.mdc  07-performance-optimization.mdc  08-linux-environment.mdc  09-task-completion-requirements.mdc  10-agent-operational-protocol.mdc  11-rule-file-standards.mdc  python-service-template.mdc  react-component-template.mdc
.github/workflows/: ci.yml
.trunk/: trunk.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: users.py
backend/app/api/v1/: auth.py
backend/app/core/: config.py  security.py
backend/app/db/: database.py
backend/app/middleware/: rate_limit.py
backend/app/models/: __init__.py  post.py  user.py
backend/app/repositories/: __init__.py  user_repository.py
backend/app/schemas/: user.py
backend/app/services/: auth.py  file_upload.py
backend/tests/: conftest.py  test_users.py
docs/: IMPROVEMENTS_SUMMARY.md  PROJECT_PLAN.md  README.md  TEMPLATE_SUMMARY.md  git-configuration.md  project_plan.md
docs/agent-work/: 001-improvements-analysis.md  002-poetry-migration-guide.md  003-critical-analysis-summary.md  004-enhanced-template-summary.md  005-project-analysis.md  006-improvements-summary.md  007-template-summary.md  009-boilerplate-enhancement-implementation.md  010-documentation-rules.md  011-enhanced-implementation-summary.md  012-linux-environment-setup.md  013-cursor-rules-classification.md  014-cursor-rules-update-summary.md  015-task-completion-requirements-update.md  016-documentation-project-plan-requirements.md  017-rule-fixes-summary.md  018-ruleset-metadata-standards-update.md  019-api-versioning-strategy.md  020-local-ssl-setup.md  021-trunk-configuration-and-warp-update.md  022-completion-workflow-enforcement-system.md
frontend/: .eslintrc.json  Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: Card.tsx  ErrorBoundary.tsx  Loading.tsx
frontend/components/auth/: LoginForm.tsx
frontend/components/ui/: Button.tsx  Input.tsx
frontend/hooks/: useAuth.ts
frontend/lib/: api-client.ts  config.ts  store.ts  utils.ts
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/: extract-always-apply-rules.sh  generate-ssl.sh  init-db.sql  performance-monitor.sh  security-check.sh  setup-linux-env.sh
